Fix hamburger menu display on narrow screens

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -181,7 +181,7 @@ footer a {
   }
   
   .nav-toggle-label {
-    display: block;
+    display: block !important;
   }
   
   nav {
